# EEvolutionPy

./: CMakeLists.txt  Display.cpp  Display.h  Food.cpp  Food.h  NNet.cpp  NNet.h  NetManager.cpp  NetManager.h  README.md  Sim.cpp  Sim.h  Specimen.cpp  Specimen.h  World.cpp  World.h  main.cpp
